src/components/menu/Menu.scss
@import "../../styles/variables";
@import "../../styles/mixins";

.menuCover {
  position: fixed;
  z-index: 50;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  background-color: $dark-color;
  pointer-events: none;
  transform: translateX(-100%);

  &.running {
    animation: 1.4s cubic-bezier(.86, 0, .07, 1);
    animation-name: menuCover;
  }
}

@keyframes menuCover {
  0% {
    transform: translateX(-100%);
  }

  50% {
    transform: translateX(0);
  }

  100% {
    transform: translateX(100%);
  }
}

.menu {
  position: fixed;
  z-index: 40;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  overflow: hidden scroll;
  background-color: $light-color;
  transform: translateX(-100%);
  opacity: 0;
  transition: opacity 0s, transform 0s;

  &.open {
    opacity: 1;
    transform: translateX(0);
    transition-delay: 0.6s;
  }

  &.closing {
    animation: 0.6s linear;
    animation-name: menuContentClose;
  }

  .menuContainer {
    @include lightTheme;

    height: 100%;

    .content,
    .content .wrapper {
      height: 100%;
    }
  }

  .menuWrapper {
    height: 100%;
    position: relative;
    display: flex;

    @media (min-width: $media-md) {
      justify-content: flex-end;
    }
  }

  .menuInner {
    padding: 21px 0;

    @media (min-width: $media-md) {
      width: 100%;
      max-width: 60%;
      padding: 35px 0;
    }

    @media (min-width: $media-lg) {
      padding: 35px 0 44px;
    }
  }

  &.open {
    .menuSocialsList .menuSocialsListItem {
      opacity: 1;
      transform: translateY(0);

      &:nth-child(1) {
        transition-delay: 1s;
      }

      &:nth-child(2) {
        transition-delay: 1.05s;
      }

      &:nth-child(3) {
        transition-delay: 1.1s;
      }

      &:nth-child(4) {
        transition-delay: 1.15s;
      }
    }

    .menuListWrapper .menuList .menuListItem {
      opacity: 1;
      transform: translateX(0);

      &:nth-child(1) {
        transition-delay: 1s;
      }

      &:nth-child(2) {
        transition-delay: 1.05s;
      }

      &:nth-child(3) {
        transition-delay: 1.1s;
      }

      &:nth-child(4) {
        transition-delay: 1.15s;
      }

      &:nth-child(5) {
        transition-delay: 1.15s;
      }
    }
  }

  .menuSocialsList {
    display: flex;
    flex-wrap: nowrap;
    gap: 23px;

    &:hover {
      .menuSocialsListItem a {
        color: #8A8B86;
      }
    }

    @media (min-width: $media-md) {
      gap: 33px;
    }

    @media (min-width: $media-lg) {
      gap: 31px;
    }

    .menuSocialsListItem {
      opacity: 0;
      transform: translateY(-20px);
      transition: opacity 0.15s ease-out, transform 0.15s ease-in-out;

      &:not(:last-child) a::after {
        height: 100%;
        content: '';
        position: absolute;
        top: 0;
        bottom: 0;
        width: 1px;
        background-color: $dark-color;
        right: -12px;

        @media (min-width: $media-md) {
          right: -16px;
        }

        @media (min-width: $media-lg) {
          right: -15px;
        }
      }

      a {
        transition: color 0.3s ease-in-out;;
        position: relative;
        font-weight: 600;
        font-size: 9px;
        line-height: 11px;
        text-transform: uppercase;
        color: $dark-color;

        @media (min-width: $media-lg) {
          font-size: 10px;
          line-height: 12px;
        }

        &:hover {
          color: $dark-color;
        }
      }
    }
  }

  .menuListWrapper {
    position: relative;
    margin: 182px 0 150px;

    @media (min-width: $media-md) {
      margin: 186px 0 120px;
    }

    @media (min-width: $media-lg) {
      margin: 226px 0 112px;
    }

    .menuList {
      position: relative;
      display: grid;
      z-index: 5;
      gap: 23px;

      @media (min-width: $media-md) {
        gap: 26px;
      }

      @media (min-width: $media-lg) {
        gap: 18px;
      }

      &:hover {
        .menuListItem {
          .menuListItemTitle,
          .menuListItemValue {
            color: #8A8B86;
          }
        }
      }

      .menuListItem {
        cursor: pointer;
        width: fit-content;
        position: relative;
        user-select: none;
        transform: translateX(50px);
        opacity: 0;
        transition: opacity 0.25s, transform 0.25s ease-in;

        &:hover {
          .menuListItemTitle,
          .menuListItemValue {
            color: $dark-color;
          }

          &.active::before {
            background-color: #8A8B86;
          }
        }

        &.active .menuListItemTitle {
          color: #8A8B86;
        }

        &.active::before {
          content: '';
          position: absolute;
          top: 50%;
          transition: background-color 0.3s;
          transform: translateY(-50%);
          left: 0;
          right: 0;
          width: 100%;
          height: 2px;
          background-color: #8A8B86;
        }
      }

      .menuListItemTitle {
        font-weight: 900;
        font-size: 28px;
        line-height: 34px;
        letter-spacing: 0.02em;
        text-transform: uppercase;
        color: $dark-color;
        transition: color 0.3s;

        @media (min-width: $media-md) {
          font-size: 34px;
          line-height: 41px;
        }

        @media (min-width: $media-lg) {
          font-size: 40px;
          line-height: 49px;
        }
      }

      .menuListItemValue {
        position: absolute;
        left: calc(100% + 10px);
        top: -5px;
        font-weight: 700;
        font-size: 13px;
        line-height: 16px;
        letter-spacing: 0.1em;
        color: $dark-color;
        transition: color 0.3s ease-in-out;

        @media (min-width: $media-md) {
          font-size: 15px;
          line-height: 18px;
        }

        @media (min-width: $media-lg) {
          font-size: 20px;
          line-height: 24px;
        }
      }
    }
  }

  .menuListDecorator {
    position: absolute;
    z-index: 10;
    width: 100vw;
    left: 50vw;
    height: 3px;
    opacity: 0;
    background-color: $dark-color;

    &.menuListDecoratorEnding {
      animation: decoratorAppear 0.3s ease-in 0s forwards;
      animation-direction: reverse;
    }
  }

  &.open {
    .menuListDecorator {
      animation: decoratorAppear 0.3s ease-in 1s forwards;
    }
  }
}

@keyframes decoratorAppear {
  0% {
    top: -29px;
    left: 50vw;
    opacity: 0;
  }

  100% {
    left: 0;
    opacity: 1;
    top: -29px;
  }
}

@keyframes menuContentClose {
  0% {
    opacity: 1;
    transform: translateX(0);
  }

  99% {
    opacity: 1;
    transform: translateX(0);
  }

  100% {
    opacity: 0;
    transform: translateX(-100%);
  }
}

